# time-series-eda

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
notebooks/: data-visualization.py  marimo_viz.py  teste.csv
notebooks/online-retail-ucimlrepo/: basic-data-description.py
