[project]
name = "time-series-eda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "fastexcel>=0.19.0",
    "marimo>=0.19.8",
    "numpy>=2.4.2",
    "polars>=1.38.0",
    "ruff>=0.15.0",
    "scipy>=1.17.0",
    "statsmodels>=0.14.6",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.9.0.post1",
]
